Now 10/27 test methods converted